finalized  simple view for partys, updated for laws