@@ -28,6 +28,7 @@ class LawControllerTest {
     private LawController lawController;
     private LawDto lawDto;
     private LawInputDto lawInputDto;
+    private final String testUserId = "testUser123";
 
     @BeforeEach
     void setUp() {
@@ -36,21 +37,25 @@ class LawControllerTest {
         lawDto = new LawDto();
         lawDto.setId(1L);
         lawDto.setDescription("Test Law");
+        lawDto.setProposingPartyName("Test Party");
 
         lawInputDto = new LawInputDto();
         lawInputDto.setDescription("Test Law");
+        lawInputDto.setProposingPartyId(1L);
     }
 
-    // Success Tests
+    //SUCCESS TESTS
+
     @Test
     void createLaw_ShouldReturnCreatedLaw() {
-        when(lawService.createLaw(any(LawInputDto.class))).thenReturn(lawDto);
+        when(lawService.createLaw(any(LawInputDto.class), eq(testUserId)))
+                .thenReturn(lawDto);
 
-        ResponseEntity<LawDto> response = lawController.createLaw(lawInputDto);
+        ResponseEntity<LawDto> response = lawController.createLaw(testUserId, lawInputDto);
 
         assertEquals(HttpStatus.CREATED, response.getStatusCode());
         assertEquals(lawDto, response.getBody());
-        verify(lawService).createLaw(lawInputDto);
+        verify(lawService).createLaw(lawInputDto, testUserId);
     }
 
     @Test
@@ -66,23 +71,38 @@ class LawControllerTest {
 
     @Test
     void getAllLaws_ShouldReturnAllLaws() {
-        List<LawDto> laws = Arrays.asList(lawDto);
-        when(lawService.getAllLaws()).thenReturn(laws);
+        List<LawDto> expectedLaws = List.of(lawDto);
 
-        ResponseEntity<List<LawDto>> response = lawController.getAllLaws();
+        when(lawService.getLawsByUserId(testUserId))
+                .thenReturn(expectedLaws);
+
+        ResponseEntity<List<LawDto>> response = lawController.getAllLaws(testUserId);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(1, response.getBody().size());
-        verify(lawService).getAllLaws();
+        verify(lawService).getLawsByUserId(testUserId);
     }
 
-    // Exception Tests
     @Test
-    void getLawById_WhenLawNotFound_ThrowsException() {
+    void getLawsByUserId_ShouldReturnUserLaws() {
+        List<LawDto> userLaws = Arrays.asList(lawDto);
+        when(lawService.getLawsByUserId(testUserId)).thenReturn(userLaws);
+
+        ResponseEntity<List<LawDto>> response = lawController.getAllLaws(testUserId);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(1, response.getBody().size());
+        verify(lawService).getLawsByUserId(testUserId);
+    }
+
+    //EXCEPTION TESTS
+
+    @Test
+    void getLawById_WhenLawNotFound_ShouldReturnNotFound() {
         when(lawService.getLawById(99L))
                 .thenThrow(new RuntimeException("Law not found with ID: 99"));
 
-        RuntimeException exception = assertThrows(RuntimeException.class, () ->
+        Exception exception = assertThrows(RuntimeException.class, () ->
                 lawController.getLawById(99L)
         );
 
@@ -91,15 +111,16 @@ class LawControllerTest {
     }
 
     @Test
-    void getAllLaws_WhenNoLawsExist_ThrowsException() {
-        when(lawService.getAllLaws())
-                .thenThrow(new RuntimeException("No laws found"));
+    void getAllLaws_WhenNoLawsExist_ShouldReturnNotFound() {
+        when(lawService.getLawsByUserId(testUserId)).thenThrow(new RuntimeException("No parties found for user: " + testUserId));
 
-        RuntimeException exception = assertThrows(RuntimeException.class,
-                () -> lawController.getAllLaws()
+        Exception exception = assertThrows(RuntimeException.class,
+                () -> lawController.getAllLaws(testUserId)
         );
 
-        assertEquals("No laws found", exception.getMessage());
-        verify(lawService).getAllLaws();
+        assertEquals("No parties found for user: " + testUserId, exception.getMessage());
+        verify(lawService).getLawsByUserId(testUserId);
     }
+
+
 }
